--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -5,42 +5,61 @@
     <title>首页</title>
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.css"/>
     <link rel="stylesheet" href="../css/font-awesome.css">
+    <link rel="stylesheet" href="../css/index.css">
 
     <script src="../js/jquery-3.2.1.js"></script>
     <script src="../js/bootstrap/bootstrap.js"></script>
     <script src="../js/timeago.js"></script>
-    <script src="https://unpkg.com/vue"></script>
+    <script src="../js/vue.js"></script>
     <!--<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <!--<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>-->
     <!--<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 </head>
 <body>
     <!--   顶部导航   -->
-    <nav id="i-nav" class="navbar navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">XXXXXX</a>
+    <nav id="i-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="width-limit">
+            <!-- 左上方logo -->
+            <a class="logo" href="#">XXX</a>
+            <!-- 右上角 -->
+            <!-- 未登录显示登录/注册/写文章 -->
+            <a class="btn write-btn" href="#">
+                <i class="icon-pencil">写文章</i>
+            </a>
+            <a class="btn sign-up" href="#">
+            注册
+            </a>
+            <a class="btn log-in" href="#">登录</a>
+            <div class="style-mode">
+                <a class="style-mode-btn">
+                    <i class="icon-cog"></i>
+                </a>
             </div>
-            <div>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">发现</a></li>
-                    <li><a href="#">关注</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            消息
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">4</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">5</a></li>
-                        </ul>
-                    </li>
-                </ul>
+            <div class="container">
+                <div id="menu" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="tab active">
+                            <a href="#">
+                                <span class="menu-text">首页</span>
+                                <i class="icon-globe menu-icon"></i>
+                            </a>
+                        </li>
+                        <li class="tab">
+                            <a class="app-download-btn" href="#">
+                                <span class="menu-text">下载App</span>
+                                <i class="icon-download menu-icon"></i>
+                            </a>
+                        </li>
+                        <li class="search">
+                            <form>
+                                <input class="search-input" placeholder="搜索" type="text">
+                                <a class="search-btn">
+                                    <i class="icon-search"></i>
+                                </a>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -98,63 +117,6 @@
     </div>
     <!-- end of 核心内容-->
 </body>
-<style>
-    body{
-        padding:50px;
-    }
-    a:link{
-        text-decoration:none;
-    }
-    a:visited{
-        text-decoration:none;
-    }
-    a:hover{
-        text-decoration:none;
-    }
-    a:active{
-        text-decoration:none;
-    }
-    #i-nav{
-        border-bottom: 1px solid gray;
-    }
-    /*#i-content,#i-left,#i-mid,#i-right{*/
-        /*border: 1px solid gray;*/
-    /*}*/
-    li{
-        list-style-type: none;
-    }
-    .collection-tag{
-        display: inline-block;
-        padding: 3px 6px;
-        margin-top: -1px;
-        max-width: 200px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        line-height: 1;
-        vertical-align: middle;
-        color: #ea6f5a !important;
-        border: 1px solid rgba(236,97,73,.7);
-        border-radius: 3px;
-    }
-    .collection-tag:hover{
-        background-color: #ebebeb;
-    }
-    .meta-info{
-        color: #c0c0c0;
-    }
-    .title{
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.5;
-    }
-    .divider {
-        height: 1px;
-        margin: 9px 0;
-        overflow: hidden;
-        background-color: #e5e5e5;
-    }
-</style>
 <script>
 
 
