前后端联合测试

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -20,10 +20,10 @@
     <nav id="i-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="width-limit">
             <!-- 左上方logo -->
-            <a class="logo" href="#">XXX</a>
+            <a class="logo" href="#">凡书</a>
             <!-- 右上角 -->
             <!-- 未登录显示登录/注册/写文章 -->
-            <a class="btn write-btn" href="#">
+            <a class="btn write-btn" href="publishPost.html" target="view_window">
                 <i class="icon-pencil">写文章</i>
             </a>
             <a class="btn sign-up" href="#">
