--- a/src/main/resources/static/html/logon.html
+++ b/src/main/resources/static/html/logon.html
@@ -102,9 +102,10 @@
 
     function makeCorsRequest(str) {
 
-        var url = "http://47.94.106.157:8080/login";
+        var url = "http:/127.0.0.1:8080/login";
 
         var xhr = createCORSReqeust('post', url);
+        alert("url:" + url);
         if(!xhr){
             alert('CORS not supported');
             return;
@@ -117,6 +118,7 @@
             var header = xhr.getResponseHeader("aaa");
             alert(header);
             var text = xhr.responseText;
+            alert("text:" + text);
             if(text == 'ok'){
                 alert('您已成功登陆，即将跳转!!!!!!!!!!!!!!!!!!');
                 window.location.href = 'index.html';
